<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBorrowerActivity">

    <!-- Main Content -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/holo_orange_dark"
            app:titleTextColor="@android:color/white"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <EditText
                android:id="@+id/borrowerName"
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/borrower_name" />

            <EditText
                android:id="@+id/mobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/borrowerName"
                android:layout_marginTop="10dp"
                android:hint="@string/mobile_number" />

            <EditText
                android:id="@+id/amountToBorrow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mobileNumber"
                android:layout_marginTop="10dp"
                android:hint="@string/amount_to_borrow" />

            <EditText
                android:id="@+id/interestRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/amountToBorrow"
                android:layout_marginTop="10dp"
                android:hint="@string/interest_rate" />

            <EditText
                android:id="@+id/monthlyInterest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/interestRate"
                android:layout_marginTop="10dp"
                android:hint="@string/monthly_interest" />

            <EditText
                android:id="@+id/loanDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/monthlyInterest"
                android:layout_marginTop="10dp"
                android:hint="@string/loan_duration" />

            <EditText
                android:id="@+id/collectionDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loanDuration"
                android:layout_marginTop="10dp"
                android:hint="Collection Day" />

            <TextView
                android:id="@+id/interestCollectionDateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/collectionDay"
                android:autoSizeMaxTextSize="20dp"
                android:text="Collection Day"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold"
                tools:text="Interest Collection Date" />



            <DatePicker
                android:id="@+id/loanStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/interestCollectionDateText"
                android:layout_marginTop="10dp"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <Button
                android:id="@+id/btnAddBorrower"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loanStartDate"
                android:layout_marginTop="20dp"
                android:text="@string/add_borrower" />
        </RelativeLayout>
    </RelativeLayout>

    <!-- Sidebar -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
